--- a/Dimension-Reduction.ipynb
+++ b/Dimension-Reduction.ipynb
@@ -12,9 +12,7 @@
    "metadata": {},
    "source": [
     "Nama: Vira Fitriyani <br>\n",
-    "NIM: 2602068706 <br>\n",
-    "Nomor 2 - Dimension Reduction\n",
-    "Link Video: https://youtu.be/fiCVPIYwWvQ "
+    "NIM: 2602068706 <br>\n"
    ]
   },
   {
