--- a/Dimension-Reduction.ipynb
+++ b/Dimension-Reduction.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Final Exam - DTSC6007001 Deep Learning"
+    "##### DTSC6007001 Deep Learning"
    ]
   },
   {
